2005-07-04  Jim Huang  <jserv@kaffe.org>

	* src/mainframe.cpp (CMainFrame::set_tray_icon):
	Create new pixbuf according to the allocated width of m_TrayIcon.
	NOTE: PCMan reported a strange behavior of tray icons padding
	under KDE 3.3 .

2005-07-04  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/pcmanx_pure_gtk2.cpp (main):
	Remove redundant CWidget::Init.

	* src/widget.h
	(CWidget::OnIdleCleanup) (CWidget::Init)
	(CWidget::m_WidgetsToBeDeleted): Removed.
	
	* src/widget.cpp
	(CWidget::OnDestroy) (CWidget::OnIdleCleanup): Implementation removed.
	(delete_CWidget): New helper function.
	(CWidget::OnIdleCleanup): Invoke delete_CWidget while idle via
	g_idle_add_full.
	Fix the most serious bug which cause extremely high system load.

2005-07-04  Jim Huang  <jserv@kaffe.org>

	* src/mainframe.h:
	Rename m_Tray_icon to m_TrayIcon_Instance.
	(CMainFrame::set_tray_icon): New helper function splitted from
	constructor to handle tray icon routines.
	(CMainFrame::m_TrayButton) (CMainFrame::m_TrayIcon): New member
	data. Likewise.

	* src/pcmanx_pure_gtk2.cpp (main):
	Adjust m_Tray_icon naming change.

	* src/mainframe.cpp
	(CMainFrame::CMainFrame): Use new helper function, set_tray_icon,
	and make sure m_MainIcon is null at startup.
	(CMainFrame::OnTrayButton_Changed): Implemented via invoking 
	set_tray_icon.

2005-07-03  Kanru Chen  <koster@debian.org.tw>
	
	* src/mainframe.cpp
	(CMainFrame::CloseCon):
	Remove correct note page and move to next page.

	* src/termview.cpp
	(CTermView::OnDestroy) (CTermView::~CTermView):
	Move XftDrawDestroy(m_XftDraw) to destructor to avoid X error,
	however, actually this destructor never be called because strange
	CWidget behavior. Need to FIX. Warn: memory leak.

	* src/caret.cpp,
	src/termview.cpp,
	src/widget.cpp:
	Some debug message.

2005-07-03  Jim Huang  <jserv@kaffe.org>

	* sitelistdlg.cpp (CSiteListDlg::LoadSiteList):
	Workaround of new GTK_STOCK_DIRECTORY macro introduced in GTK+ 2.6 .